5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4254/executions/1674_1872.log
== SUBMITION (2019-04-26 20:31:31) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Digite a coordenada x: "))
y=float(input("Digite a coordenada y: "))

if(x==y and x==0):
	print("Origem")
elif(x>0 and y>0):
	print("Q1"):
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
elif(x==0 and y>0 or y<0):
	print("Eixo X")
elif(y==0 and x>0 or x<0):
	print("Eixo y")
		
-- EXECUTION TIME:
0.159149
-- ERROR:
  File "/home/codebench/codes/1674/1872/main.py", line 8
    print("Q1"):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:31:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Digite a coordenada x: "))
y=float(input("Digite a coordenada y: "))

if(x==y and x==0):
	print("Origem")
elif(x>0 and y>0):
	print("Q1"):
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
elif(x==0 and y>0 or y<0):
	print("Eixo X")
elif(y==0 and x>0 or x<0):
	print("Eixo y")
		
-- ERROR:
File "XXXX", line 8
    print("Q1"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:31:52) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Digite a coordenada x: "))
y=float(input("Digite a coordenada y: "))

if(x==y and x==0):
	print("Origem")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
elif(x==0 and y>0 or y<0):
	print("Eixo X")
elif(y==0 and x>0 or x<0):
	print("Eixo y")
		
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 20:31:55) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Digite a coordenada x: "))
y=float(input("Digite a coordenada y: "))

if(x==y and x==0):
	print("Origem")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
elif(x==0 and y>0 or y<0):
	print("Eixo X")
elif(y==0 and x>0 or x<0):
	print("Eixo y")
		
-- EXECUTION TIME:
0.204248
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo y
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:32:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Digite a coordenada x: "))
y=float(input("Digite a coordenada y: "))

if(x==y and x==0):
	print("Origem")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
elif(x==0 and y>0 or y<0):
	print("Eixo X")
elif(y==0 and x>0 or x<0):
	print("Eixo y")
		
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 20:34:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Digite a coordenada x: "))
y=float(input("Digite a coordenada y: "))

if(x==0 and y==0):
	print("Origem")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
elif(x==0 and y>0 or y<0):
	print("Eixo X")
elif(y==0 and x>0 or x<0):
	print("Eixo y")
		
-- EXECUTION TIME:
0.188951
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo y
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:34:52) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Digite a coordenada x: "))
y=float(input("Digite a coordenada y: "))

if(x==0 and y==0):
	print("Origem")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
elif(x==0 and y>0 or y<0):
	print("Eixo X")
elif(y==0 and x>0 or x<0):
	print("Eixo y")
		
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 20:35:46) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Digite a coordenada y: "))
x=float(input("Digite a coordenada x: "))

if(x==0 and y==0):
	print("Origem")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
elif(x==0 and y>0 or y<0):
	print("Eixo X")
elif(y==0 and x>0 or x<0):
	print("Eixo y")
		
-- EXECUTION TIME:
0.190871
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q2
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:37:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Digite a coordenada y: "))
x=float(input("Digite a coordenada x: "))

if(x==0 and y==0):
	print("Origem")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
elif(x==0 and y>0 or x==0 and y<0):
	print("Eixo X")
elif(y==0 and x>0 or y==o and x<0):
	print("Eixo y")
		
-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:37:27) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Digite a coordenada y: "))
x=float(input("Digite a coordenada x: "))

if(x==0 and y==0):
	print("Origem")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
elif(x==0 and y>0 or x==0 and y<0):
	print("Eixo X")
elif(y==0 and x>0 or y==0 and x<0):
	print("Eixo y")
		
-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:37:44) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Digite a coordenada y: "))
x=float(input("Digite a coordenada x: "))

if(x==0 and y==0):
	print("Origem")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
elif(x==0 and y>0 or x==0 and y<0):
	print("Eixo X")
elif(y==0 and x>0 or y==0 and x<0):
	print("Eixo Y")
		
-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 20:37:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Digite a coordenada y: "))
x=float(input("Digite a coordenada x: "))

if(x==0 and y==0):
	print("Origem")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
elif(x==0 and y>0 or x==0 and y<0):
	print("Eixo X")
elif(y==0 and x>0 or y==0 and x<0):
	print("Eixo Y")
		
-- EXECUTION TIME:
0.135199
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q2
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:39:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Digite a coordenada y: "))
x=float(input("Digite a coordenada x: "))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0 or x==0 and y<0):
	print("Eixo X")
elif(y==0 and x>0 or y==0 and x<0):
	print("Eixo Y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")

		
-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 20:39:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Digite a coordenada y: "))
x=float(input("Digite a coordenada x: "))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0 or x==0 and y<0):
	print("Eixo X")
elif(y==0 and x>0 or y==0 and x<0):
	print("Eixo Y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")

		
-- EXECUTION TIME:
0.164849
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q2
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:40:35) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Digite a coordenada y: "))
x=float(input("Digite a coordenada x: "))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0 or x==0 and y<0):
	print("Eixo X")
elif(y==0 and x>0 or y==0 and x<0):
	print("Eixo Y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")

		
-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:40:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Digite a coordenada y: "))
x=float(input("Digite a coordenada x: "))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0 or x==0 and y<0):
	print("Eixo X")
elif(y==0 and x>0 or y==0 and x<0):
	print("Eixo Y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")

		
-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:40:46) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Digite a coordenada y: "))
x=float(input("Digite a coordenada x: "))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0 or x==0 and y<0):
	print("Eixo X")
elif(y==0 and x>0 or y==0 and x<0):
	print("Eixo Y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")

		
-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:41:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Digite a coordenada y: "))
x=float(input("Digite a coordenada x: "))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0 or x==0 and y<0):
	print("Eixo X")
elif(y==0 and x>0 or y==0 and x<0):
	print("Eixo Y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")

		
-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:41:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Digite a coordenada x: "))
y=float(input("Digite a coordenada y: "))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0 or x==0 and y<0):
	print("Eixo X")
elif(y==0 and x>0 or y==0 and x<0):
	print("Eixo Y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")

		
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 20:41:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Digite a coordenada x: "))
y=float(input("Digite a coordenada y: "))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0 or x==0 and y<0):
	print("Eixo X")
elif(y==0 and x>0 or y==0 and x<0):
	print("Eixo Y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")

		
-- EXECUTION TIME:
0.2004
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo Y
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:41:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Digite a coordenada x: "))
y=float(input("Digite a coordenada y: "))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0 or x==0 and y<0):
	print("Eixo X")
elif(y==0 and x>0 or y==0 and x<0):
	print("Eixo Y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")

		
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:42:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Digite a coordenada x: "))
y=float(input("Digite a coordenada y: "))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0 or x==0 and y<0):
	print("Eixo X")
elif(y==0 and x>0 or y==0 and x<0):
	print("Eixo Y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")

		
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 20:42:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Digite a coordenada x: "))
y=float(input("Digite a coordenada y: "))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0 or x==0 and y<0):
	print("Eixo X")
elif(y==0 and x>0 or y==0 and x<0):
	print("Eixo Y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")

		
-- EXECUTION TIME:
0.170204
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo Y
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:42:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Digite a coordenada x: "))
y=float(input("Digite a coordenada y: "))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0 or x==0 and y<0):
	print("Eixo X")
elif(y==0 and x>0 or y==0 and x<0):
	print("Eixo Y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")

		
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:44:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Digite a coordenada x: "))
y=float(input("Digite a coordenada y: "))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0 or x==0 and y<0):
	print("Eixo X")
elif(y==0 and x>0 or y==0 and x<0):
	print("Eixo Y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
else:
	print("Q4")

		
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 20:44:26) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Digite a coordenada x: "))
y=float(input("Digite a coordenada y: "))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0 or x==0 and y<0):
	print("Eixo X")
elif(y==0 and x>0 or y==0 and x<0):
	print("Eixo Y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
else:
	print("Q4")

		
-- EXECUTION TIME:
0.207077
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo Y
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:52:55) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Digite a coordenada y: "))
x=float(input("Digite a coordenada x: "))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0 or x==0 and y<0):
	print("Eixo X")
elif(y==0 and x>0 or y==0 and x<0):
	print("Eixo Y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
else:
	print("Q4")

		
-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:53:11) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Digite a coordenada y: "))
x=float(input("Digite a coordenada x: "))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0 or x==0 and y<0):
	print("Eixo X")
elif(y==0 and x>0 or y==0 and x<0):
	print("Eixo Y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
else:
	print("Q4")

		
-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 20:53:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Digite a coordenada y: "))
x=float(input("Digite a coordenada x: "))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0 or x==0 and y<0):
	print("Eixo X")
elif(y==0 and x>0 or y==0 and x<0):
	print("Eixo Y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
else:
	print("Q4")

		
-- EXECUTION TIME:
0.160364
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q2
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:54:46) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Digite a coordenada y: "))
x=float(input("Digite a coordenada x: "))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0 or x==0 and y<0):
	print("Eixo X")
elif(y==0 and x>0 or y==0 and x<0):
	print("Eixo Y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
else:
	print("Q4")

		
-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:54:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Digite a coordenada y: "))
x=float(input("Digite a coordenada x: "))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0 or x==0 and y<0):
	print("Eixo X")
elif(y==0 and x>0 or y==0 and x<0):
	print("Eixo Y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
else:
	print("Q4")

		
-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 20:56:38) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Digite a coordenada y: "))
x=float(input("Digite a coordenada x: "))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0 or x==0 and y<0):
	print("Eixo Y")
elif(y==0 and x>0 or y==0 and x<0):
	print("Eixo X")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
else:
	print("Q4")

		
-- EXECUTION TIME:
0.16267
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q2
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo Y
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 20:57:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Digite a coordenada y: "))
x=float(input("Digite a coordenada x: "))

if(x==0 and y==0):
	print("Origem")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
else:
	print("Q4")
elif(x==0 and y>0 or x==0 and y<0):
	print("Eixo Y")
elif(y==0 and x>0 or y==0 and x<0):
	print("Eixo X")
		
-- EXECUTION TIME:
0.136558
-- ERROR:
  File "/home/codebench/codes/1674/1872/main.py", line 15
    elif(x==0 and y>0 or x==0 and y<0):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 20:59:01) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Digite a coordenada y: "))
x=float(input("Digite a coordenada x: "))

if(x==0 and y==0):
	print("Origem")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
elif(x==0 and y>0 or x==0 and y<0):
	print("Eixo Y")
elif(y==0 and x>0 or y==0 and x<0):
	print("Eixo X")
		
-- EXECUTION TIME:
0.141688
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q2
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo Y
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 21:00:27) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("Digite a coordenada y: "))
x=float(input("Digite a coordenada x: "))

if(x==0 and y==0):
	print("Origem")
elif((x==0 and y>0) or (x==0 and y<0)):
	print("Eixo Y")
elif((y==0 and x>0) or (y==0 and x<0)):
	print("Eixo X")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")

		
-- EXECUTION TIME:
0.121241
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q2
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo Y
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 21:01:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Digite a coordenada x: "))
y=float(input("Digite a coordenada y: "))

if(x==0 and y==0):
	print("Origem")
elif((x==0 and y>0) or (x==0 and y<0)):
	print("Eixo Y")
elif((y==0 and x>0) or (y==0 and x<0)):
	print("Eixo X")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")

		
-- EXECUTION TIME:
0.110231
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
